--- a/demo01/src/main/resources/application.properties
+++ b/demo01/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#Ö¸¶¨tomcat¶Ë¿Ú
+#æŒ‡å®štomcatç«¯å£
 server.port=8080
-#Á¬½ÓÊı¾İ¿âĞÅÏ¢
+#è¿æ¥æ•°æ®åº“ä¿¡æ¯
 spring.datasource.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/power
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-#mybatisÅäÖÃĞÅÏ¢
-#sql mapperÓ³ÉäÎÄ¼şÎ»ÖÃ
+#mybatisé…ç½®ä¿¡æ¯
+#sql mapperæ˜ å°„æ–‡ä»¶ä½ç½®
 mybatis.mapper-locations=classpath:com/lanou/demo01/mapper/userMapper.xml
-#ÒıÈëmybatisºËĞÄÅäÖÃÎÄ¼şÎ»ÖÃ
+#å¼•å…¥mybatisæ ¸å¿ƒé…ç½®æ–‡ä»¶ä½ç½®
 #mybatis.config-location=classpath:
-#ÏÂ»®ÏßÍÕ·åÊ½ÃüÃû·¨×Ô¶¯Ó³Éä
+#ä¸‹åˆ’çº¿é©¼å³°å¼å‘½åæ³•çš„è‡ªåŠ¨æ˜ å°„
 mybatis.configuration.map-underscore-to-camel-case=true
